# real-world-forecasting-foundations

./: .gitignore  1.09_diagnostics.parquet  LICENSE  README.md  environment.yml  pyproject.toml  test_fva_integration.py
archive/: 1.06_first_contact.ipynb
artifacts/: manifest.json
artifacts/01_foundations/: manifest.json
artifacts/01_foundations/reports/: 1_06.json
config/: decisions.yaml
docs/: index.md
docs/plans/: 2026-02-01-fva-metric-implementation.md
modules/: module_1_12_leakage_gaurdrails.ipynb  module_1_8_preparing_data.ipynb  module_1_8_tsfeatures_diagnostics.ipynb  module_1_9_ts_diagnostics.ipynb
modules/1.6/: module_1_6_first_contact.ipynb  module_1_6_script.md
modules/1.7/: module_1_7_script.md  module_1_7_understanding_m5_data.html
notebooks/module_01_foundations/: 1.06_first_contact.ipynb  1.08_data_preparation.ipynb  1.09_diagnostics.ipynb  1.09_diagnostics_v2.ipynb  1.09_ts_diagnostics.ipynb  1.10_lie_detector.ipynb  1.10_lie_detector_v2.ipynb  1.12_plotting.ipynb  1.12_portfolio_architecture.ipynb  1.12_portfolio_architecture_v2.ipynb  1.7_understanding_m5_data.html  1_06_first_contact.ipynb  1_08_data_preparation.ipynb  1_10_diagnostics.ipynb  1_12_portfolio_architecture.ipynb
notebooks/module_01_foundations/archive/: 1.06_first_contact_v2.ipynb  1.09_diagnostics.ipynb  1.10_lie_detector.ipynb  1.10_lie_detector_v2.ipynb  1.12_portfolio_architecture.ipynb
notebooks/module_02_baselines/: 2.02_baseline_model_zoo.ipynb  2.03_CV_execution copy.ipynb  2.03_CV_execution.ipynb  2.04_forecasting_metrics.ipynb  2.05_executive_summary.ipynb  2.05_governance_scoreboarding.ipynb  2.05_governance_scoreboarding.ipynb.backup  2.06_model_performance_macro.ipynb  2.07_performance_diagnostics_micro.ipynb  2.08_genai_assisted_evaluation.ipynb  2.09_prediction_intervals_conformal.ipynb  2.10_prediction_interval_metrics.ipynb
src/: __init__.py  metrics.py
src/adapters/: __init__.py  inspect.py
src/analysis/: __init__.py  report.py
src/cache/: cache.py
src/forecast_foundations/: __init__.py
src/forecast_foundations/analysis/: __init__.py  reports.py
src/forecast_foundations/cache/: __init__.py  cache.py
src/forecast_foundations/reports/: core.py
src/forecast_foundations/utils/: __init__.py  bootstrap.py  helpers.py
src/utils/: helpers.py
utils/: __init__.py  cache_manager.py  load_data.py  paths.py  report.py  styling.py
